[package]
name = "dioxus-clipboard"
version = "0.2.0"
edition = "2021"
description = "Clipboard integration for Dioxus 🧬"
readme = "./README.md"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
homepage = "https://github.com/dioxus-community/dioxus-clipboard"
repository = "https://github.com/dioxus-community/dioxus-clipboard"
keywords = ["dioxus"]
categories = ["gui"]

[dependencies]
dioxus = { version = "0.7.0-alpha.3", default-features = false, features = ["macro", "hooks", "signals"] }
copypasta = "0.10"

[dev-dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["desktop"]}