[package]
name = "dioxus-clipboard"
version = "0.3.0-alpha.0"
edition = "2021"
description = "Clipboard integration for Dioxus 🧬"
readme = "./README.md"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
homepage = "https://github.com/dioxus-community/dioxus-clipboard"
repository = "https://github.com/dioxus-community/dioxus-clipboard"
keywords = ["dioxus"]
categories = ["gui"]

[features]
default = ["copypasta"]
wasm = ["web-sys", "wasm-bindgen", "js-sys", "wasm-bindgen-futures"]
async = []

[dependencies]
dioxus = { version = "0.7.0-alpha.3", default-features = false, features = ["macro", "hooks", "signals"] }
copypasta = { version = "0.10", optional = true }

# WASM dependencies
web-sys = { version = "0.3", optional = true, features = ["Clipboard", "Navigator", "Window"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }  
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["desktop"]}