[package]
name = "dioxus-clipboard"
version = "0.3.0-rc.0"
edition = "2021"
description = "Clipboard integration for Dioxus 🧬"
readme = "./README.md"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
homepage = "https://github.com/dioxus-community/dioxus-clipboard"
repository = "https://github.com/dioxus-community/dioxus-clipboard"
keywords = ["dioxus"]
categories = ["gui"]

[dependencies]
dioxus = { version = "0.7.0-rc.0", default-features = false, features = ["macro", "hooks", "signals"] }
copypasta = "0.10"

[dev-dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["desktop"] }