[package]
name = "wasm-async-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["fullstack"] }
dioxus-clipboard = { path = "../..", features = ["wasm", "async"] }
serde = "1.0"
reqwest = "0.12"

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]
